hphp/test/slow/magic-methods/set.php.expectf
Fatal error: Magic `__set` methods are no longer supported in %s/set.php on line 4
